--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk android:minSdkVersion="10" />
 	
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    
+	<uses-permission android:name="android.permission.VIBRATE"/>
+	    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -26,6 +27,13 @@
         </activity>
         
         <service android:name="helper.main.TimerService"></service>
+
+        <activity
+            android:name=".AlarmDialog"
+            android:label="@string/app_name"
+        		>
+                    
+                </activity>
         
     </application>
 
