--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,19 +5,36 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
-
+	
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="android.permission.VIBRATE"/>
+	    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name=".S_01_TimerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            
+            android:screenOrientation="portrait"
+             
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service android:name="helper.main.TimerService"></service>
+
+        <activity
+            android:name=".AlarmDialog"
+            android:label="@string/app_name"
+        		>
+                    
+                </activity>
+        
     </application>
 
 </manifest>
