--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,9 @@
 	    
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:permission="android.permission.ACCESS_CHECKIN_PROPERTIES">
+
         <activity
             android:name=".S_01_TimerActivity"
             android:label="@string/app_name"
@@ -31,9 +33,12 @@
         <activity
             android:name=".AlarmDialog"
             android:label="@string/app_name"
+            
+            android:excludeFromRecents="true"
         		>
                     
                 </activity>
+        <activity android:name="Preferences"></activity>
         
     </application>
 
